<resources>
    <string name="app_name">Carbon Footprint</string>
    <string name="appTitle">C A R B N</string>
    <string name="appInfo">Answer the following questions to
                            \ncalculate your carbon footprint on
                            \ncampus at the University of Strathclyde</string>

    <string name="travelTitle">Travel</string>
    <string name="question_public_transport">How many hours per week do you spend in public transport on your commute to university?</string>
    <string name="answer_public_transport_0">0 hours</string>
    <string name="answer_public_transport_1">1 to 3 hours</string>
    <string name="answer_public_transport_2">3 to 6 hours</string>
    <string name="answer_public_transport_3">6 to 9 hours</string>
    <string name="answer_public_transport_4">Over 9 hours</string>

    <string name="question_car">How many hours per week do you spend driving on your commute to university?</string>
    <string name="answer_car_0">0 hours</string>
    <string name="answer_car_1">1 to 3 hours</string>
    <string name="answer_car_2">3 to 6 hours</string>
    <string name="answer_car_3">6 to 9 hours</string>
    <string name="answer_car_4">Over 9 hours</string>

    <string name="question_plane">How far have you travelled by plane in the last year?</string>
    <string name="answer_plane_0">Domestic(UK/Ireland)</string>
    <string name="answer_plane_1">Up to 1000 miles</string>
    <string name="answer_plane_2">Up to 2000 miles</string>
    <string name="answer_plane_3">Up to 4000 miles</string>
    <string name="answer_plane_4">Up to 6000 miles</string>
    <string name="answer_plane_5">Up to 12000 miles</string>

    <string name="next">Next</string>
    <string name="back">Back</string>

    <string name="electricTitle">Electronic Devices</string>
    <string name="question_PC">How many hours per week do you use the PCs at university?</string>
    <string name="answer_PC_0">0 hours</string>
    <string name="answer_PC_1">1 to 6 hours</string>
    <string name="answer_PC_2">6 to 12 hours</string>
    <string name="answer_PC_3">12 to 18 hours</string>
    <string name="answer_PC_4">Over 18 hours</string>

    <string name="question_printer">How many times per week do you use the printer at university?</string>
    <string name="answer_printer_0">0 times</string>
    <string name="answer_printer_1">1 to 3 times</string>
    <string name="answer_printer_2">3 to 6 times</string>
    <string name="answer_printer_3">6 to 9 times</string>
    <string name="answer_printer_4">More than 9 times</string>

    <string name="question_laptop">How many hours per week do you spend using your own or work laptop in university?</string>
    <string name="answer_laptop_0">0 hours</string>
    <string name="answer_laptop_1">1 to 6 hours</string>
    <string name="answer_laptop_2">6 to 12 hours</string>
    <string name="answer_laptop_3">12 to 18 hours</string>
    <string name="answer_laptop_4">Over 18 hours</string>

    <string name="facilitiesTitle">On Campus</string>
    <string name="question_library">How many times per week do you visit the university library?</string>
    <string name="answer_library_0">0 times</string>
    <string name="answer_library_1">1 to 3 times</string>
    <string name="answer_library_2">3 to 6 times</string>
    <string name="answer_library_3">6 to 9 times</string>
    <string name="answer_library_4">More than 9 times</string>

    <string name="question_gym">How many times per week do you visit the university gym?</string>
    <string name="answer_gym_0">0 times</string>
    <string name="answer_gym_1">1 to 3 times</string>
    <string name="answer_gym_2">3 to 6 times</string>
    <string name="answer_gym_3">6 to 9 times</string>
    <string name="answer_gym_4">More than 9 times</string>

    <string name="question_lecture">How many times per week do you use university labs or lecture rooms?</string>
    <string name="answer_lecture_0">0 times</string>
    <string name="answer_lecture_1">1 to 3 times</string>
    <string name="answer_lecture_2">3 to 6 times</string>
    <string name="answer_lecture_3">More than 6 times</string>
    <string name="results">Results</string>

    <string name="home">Home</string>
    <string name="type_car">Car travel</string>
    <string name="type_plane">Air travel</string>
    <string name="type_computer">PC use</string>
    <string name="type_train">Rail travel</string>

    <string name ="type_hotel">Hotel stay</string>

    <string name="type_lecture">Lectures</string>
    <string name="type_gym">Gym use</string>
    <string name="type_printer">Printing</string>
    <string name="type_library">Library use</string>
    <string name="type_laptop">Laptop use</string>

    <string name="tipsInfo">Would you like to learn more about \nhow to reduce your carbon footprint? Click below and find out how you can save the planet!</string>
    <string name="tips">Tips</string>

    <string name="tips_headline">10 tips to reduce your carbon footprint</string>
    <string name="travel_info_text_0">Switching from cars to buses/trains is a great way to reduce your carbon footprint</string>
    <string name="travel_info_text_1">If you have to use a car to get to the university ask your neighbours if they need a ride</string>
    <string name="travel_info_text_2">Cycle and help the planet while getting fit. All students can use Nextbike bikes for 30 mins free of charge</string>

    <string name="campus_info_text_0">Natural light is 100% better for your eyes so switch off that light</string>
    <string name="campus_info_text_1">Bring your own water bottle and not only will there be less plastic but you also cut down all the production and transportation carbon</string>
    <string name="campus_info_text_2">Use the stairs instead of an elevator and you do not need the gym anymore</string>

    <string name="devices">Devices</string>
    <string name="dev_text_info_0">If the weather is good run outside. You will save 5 kg of greenhouse gases</string>
    <string name="dev_text_info_1">Wake up early and study during the day. You can save a lot of energy by not studying at night</string>

    <string name="alwaysTitle">Always</string>
    <string name="always_text_into_0">Think about your daily activities and if you can do them more efficiently or using less electricity</string>
    <string name="always_text_into_1">Don\'t forget that no one is perfect so don\'t give up when you feel like your carbon footprint is too high</string>

    <string name="start">Start</string>
    <string name="resultsButton">Results</string>
    <string name="fc_hotel_nights">Nights in hotel</string>
    <string name="textGoal">Your weekly CO2 emissions goal should be:</string>
    <string name="textAverage">UK average weekly CO2 emissions:</string>
    <string name="weeklyButton">weekly</string>
    <string name="monthlyTitle">monthly</string>
    <string name="annualTitle">annual</string>


</resources>
