<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="40dp"
            android:text="@string/question_public_transport"
            android:textColor="#FFFFFF" />

        <RadioGroup
            android:layout_width="310dp"
            android:layout_height="200dp"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginEnd="55dp"
            android:layout_marginRight="55dp"
            android:tag="type_train">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/yellow"
                android:tag="0.0"
                android:text="@string/answer_public_transport_0"
                android:textColor="#FFFFFF" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/yellow"
                android:tag="2.0"
                android:text="@string/answer_public_transport_1"
                android:textColor="#FFFFFF" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/yellow"
                android:tag="4.0"
                android:text="@string/answer_public_transport_2"
                android:textColor="#FFFFFF" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/yellow"
                android:tag="7.0"
                android:text="@string/answer_public_transport_3"
                android:textColor="#FFFFFF" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/yellow"
                android:tag="12.0"
                android:text="@string/answer_public_transport_4"
                android:textColor="#FFFFFF" />
        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>