<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-4dp">

        <TextView
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="40dp"
            android:text="@string/question_lecture"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="55dp" />

        <RadioGroup
            android:layout_width="310dp"
            android:layout_height="200dp"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginEnd="55dp"
            android:layout_marginRight="55dp"
            android:tag="type_lecture">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/answer_lecture_0"
                android:textColor="#FFFFFF"
                android:tag="0.0"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/answer_lecture_1"
                android:textColor="#FFFFFF"
                android:tag="2.0"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/answer_lecture_2"
                android:textColor="#FFFFFF"
                android:tag="5.0"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/answer_lecture_3"
                android:textColor="#FFFFFF"
                android:tag="8.0"/>


        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>