<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#212121">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:gravity="center"
        android:text="@string/appTitle"
        android:textAllCaps="true"
        android:textColor="@color/pastelGreen"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appInfo"
        android:layout_width="281dp"
        android:layout_height="93dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:gravity="center"
        android:text="@string/appInfo"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="156dp"
        android:layout_marginRight="156dp"
        android:background="@drawable/button_border"
        android:onClick="openSurvey"
        android:text="@string/start"
        android:textColor="@color/pastelGreen"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appInfo" />

    <TextView
        android:id="@+id/tipsInfo"
        android:layout_width="283dp"
        android:layout_height="102dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:gravity="center"
        android:text="@string/tipsInfo"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStart" />

    <Button
        android:id="@+id/button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:background="@drawable/button_border_pink"
        android:onClick="openTips"
        android:text="@string/tips"
        android:textColor="@color/pastelPink"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipsInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>