<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context=".Education">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="335dp"
        android:layout_height="116dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:gravity="center"
        android:text="@string/tips_headline"
        android:textAllCaps="true"
        android:textColor="@color/pastelPink"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="159dp"
        android:layout_height="175dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:text="TextView"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="159dp"
        android:layout_height="175dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="159dp"
        android:layout_height="34dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="37dp"
        android:gravity="center"
        android:text="@string/travelTitle"
        android:textAllCaps="true"
        android:textColor="@color/pastelBlue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="159dp"
        android:layout_height="34dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:gravity="center"
        android:text="@string/facilitiesTitle"
        android:textAllCaps="true"
        android:textColor="@color/pastelTeal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>